register, Login & Logout

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,3 @@
 MONGO_URI=mongodb://127.0.0.1:27017/aptiMaster
-GOOGLE_SHEET_ID=your-google-sheet-id
-GOOGLE_SERVICE_ACCOUNT_EMAIL=your-service-account-email
-GOOGLE_PRIVATE_KEY="your-private-key"
+JWT_SECRET=iloveaustin
 PORT=5000
