--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,21 +4,23 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
+        "start": "node app.js",
+        "dev": "nodemon app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.7",
-      "express": "^4.21.2",
-      "google-spreadsheet": "^4.1.4",
-      "mongoose": "^8.12.1",
-      "multer": "^1.4.5-lts.1",
-      "nodemon": "^3.1.9"
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "google-spreadsheet": "^4.1.4",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.12.1",
+        "multer": "^1.4.5-lts.1",
+        "nodemon": "^3.1.9"
     }
-  }
-  
+}
